[package]
name = "posfz"
version = "0.1.0"
edition = "2021"
authors = ["Mike AntonovMA@outlook.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-fuzzy-search = "0.1.1"
simsearch = "0.2.4"
strsim = "0.10.0"
sublime_fuzzy = "0.7.0"
tantivy = "0.19.2"
utf16_reader = "0.1.0"
